Update: Modifications to a news article and some styling improvements.
I found some good things about the Librem5 phone and this amends my review adding notes in this regard.

I tried to avoid having class="p" but now that I need specific styling I am using it.
I intend to completely avoid any CSS styling on the elements themselves and instead only use class names.
This has an unfortunate consequence of using a few more characters per tag.

A special subsection box class is provided for any note worth updates to news articles.

--- a/css/kevux-screen-normal.css
+++ b/css/kevux-screen-normal.css
@@ -46,6 +46,14 @@
   line-height: 1.5rem;
 }
 
+.kevux .subsection.update > .header > .h3,
+.kevux .subsection.update > .header > .h4,
+.kevux .subsection.update > .header > .h5,
+.kevux .subsection.update > .header > .h6 {
+  font-size: 0.9rem;
+  line-height: 1.3rem;
+}
+
 .kevux > .content-block > .main-block .grid.expand.columns-4 {
   grid-template-columns: auto auto auto;
 }
