--- a/css/kevux-screen-small.css
+++ b/css/kevux-screen-small.css
@@ -42,6 +42,14 @@
   line-height: 1.4rem;
 }
 
+.kevux .subsection.update > .header > .h3,
+.kevux .subsection.update > .header > .h4,
+.kevux .subsection.update > .header > .h5,
+.kevux .subsection.update > .header > .h6 {
+  font-size: 0.8rem;
+  line-height: 1.2rem;
+}
+
 .kevux > .content-block > .main-block .grid.expand.columns-4 {
   grid-template-columns: auto auto;
 }
