Update: Apply custom print break hints.
I'm not sure how useful this is going to be.
Provide hints to encourage not breaking after a section or subsection heading when printing.

--- a/css/kevux-print.css
+++ b/css/kevux-print.css
@@ -17,6 +17,12 @@
   margin-bottom: 8px;
 }
 
+.kevux > .content-block .section > .header,
+.kevux > .content-block .subsection > .header {
+  break-before: auto;
+  break-after: avoid-page;
+}
+
 .kevux > .content-block .image.content {
   display: block;
 
