--- a/css/kevux-screen-desktop.css
+++ b/css/kevux-screen-desktop.css
@@ -47,3 +47,7 @@
 .kevux > .content-block > .nav-block > .nav-menu > .nav-item:last-of-type.unlink {
   border-top: 1px dashed #556000;
 }
+
+.kevux > .content-block .article .table.fll-release {
+  min-width: 400px;
+}
