Update: Implement "super" CSS class.
The CSS for the "super" class is now defined.

The "super" class is in use on the fll.html page.

--- a/css/kevux.css
+++ b/css/kevux.css
@@ -296,3 +296,8 @@
   background-color: #404040;
   color: #ffffff;
 }
+
+.kevux > .content-block .super {
+  font-size: 55%;
+  vertical-align: super;
+}
